--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,24 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+/front_end/node_modules
+/back_end/node_modules
+/front_end/.pnp
+/front_end/.pnp.js
 
 # testing
-/coverage
+/front_end/coverage
 
 # production
-/build
+/front_end/build
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/front_end/.DS_Store
+/front_end/.env.local
+/front_end/.env.development.local
+/front_end/.env.test.local
+/front_end/.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/front_end/npm-debug.log*
+/front_end/yarn-debug.log*
+/front_end/yarn-error.log*
