--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,23 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/front_end/node_modules
-/back_end/node_modules
-/front_end/.pnp
-/front_end/.pnp.js
+node_modules
+.pnp
+.pnp.js
 
 # testing
-/front_end/coverage
+coverage
 
 # production
-/front_end/build
+build
 
 # misc
-/front_end/.DS_Store
-/front_end/.env.local
-/front_end/.env.development.local
-/front_end/.env.test.local
-/front_end/.env.production.local
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-/front_end/npm-debug.log*
-/front_end/yarn-debug.log*
-/front_end/yarn-error.log*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
