--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-loader-spinner": "^3.1.5",
     "react-scripts": "5.0.1",
     "react-select": "^3.0.8",
-    "recharts": "^2.0.0-beta.1",
+    "recharts": "^2.10.1",
     "simple-react-form": "^2.4.1"
   },
   "scripts": {
