--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.0",
+    "axios": "^1.6.2",
     "lodash": "^4.17.15",
-    "moment": "^2.24.0",
+    "moment": "^2.29.4",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^3.1.5",
     "react-scripts": "5.0.1",
-    "react-select": "^3.0.8",
+    "react-select": "4.3.1",
     "recharts": "^2.10.1",
     "simple-react-form": "^2.4.1"
   },
