--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^1.6.2",
     "lodash": "^4.17.15",
-    "moment": "^2.29.4",
+    "luxon": "^3.4.4",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
