--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nice_days_count",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://danieldepaolo.github.io/nice-days-counter",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -21,6 +22,8 @@
     "recharts": "^2.10.1"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.1.0"
   }
 }
